--- a/app/src/main/res/drawable/checkbox_unchecked_epaper.xml
+++ b/app/src/main/res/drawable/checkbox_unchecked_epaper.xml
@@ -5,14 +5,14 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
 
-    <!-- Very thick black border -->
+    <!-- Light gray background circle -->
     <path
-        android:fillColor="#000000"
-        android:pathData="M20,2H4C2.9,2 2,2.9 2,4v16c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V4C22,2.9 21.1,2 20,2z"/>
+        android:fillColor="#E0E0E0"
+        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2z"/>
 
-    <!-- Large white inner area -->
+    <!-- Dark gray border ring -->
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M19,3H5C4.4,3 4,3.4 4,4v16c0,0.6 0.4,1 1,1h14c0.6,0 1,-0.4 1,-1V4C20,3.4 19.6,3 19,3z"/>
+        android:fillColor="#9E9E9E"
+        android:pathData="M12,4C7.58,4 4,7.58 4,12s3.58,8 8,8 8,-3.58 8,-8 -3.58,-8 -8,-8zM12,18c-3.31,0 -6,-2.69 -6,-6s2.69,-6 6,-6 6,2.69 6,6 -2.69,6 -6,6z"/>
 
 </vector>
